--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,8 @@ img {
 }
 
 .header-container {
+  margin-top: auto;
+  margin-bottom: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -144,6 +146,11 @@ img {
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(/images/people-office1.jpeg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 
 .hero-container {
@@ -282,12 +289,19 @@ img {
   justify-content: space-between;
 }
 
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
 .main-title {
   margin-bottom: 72px;
 }
 
 .team-item {
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .main-images {
@@ -325,6 +339,10 @@ img {
   margin-top: 0;
 }
 
+.footer-container {
+  display: flex;
+}
+
 .footer-logo-down {
   color: var(--CLOUD, #f4f4fd);
 }
@@ -341,4 +359,21 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.feature-icon-container {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  margin-bottom: 8px;
+  padding: 24px 100px;
+}
+
+.footer-cocial {
+}
+
+.path {
+  fill: #4d5ae5;
 }
