--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,8 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-logo {
@@ -143,14 +145,15 @@ img {
 /* Hero styles */
 
 .hero {
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(/images/people-office1.jpeg);
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
 }
 
 .hero-container {
@@ -210,6 +213,12 @@ img {
 
 .feature {
   padding: 120px 0;
+}
+
+.feature-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-title {
@@ -273,6 +282,38 @@ img {
 .ourteam-list {
   display: flex;
   justify-content: space-between;
+}
+
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  list-style-type: none;
+  margin-top: 8px;
+}
+
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+
+.uorteam-icon {
+  fill: #f4f4fd;
 }
 
 .our-portfolio {
