--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,14 @@ img {
   align-items: center;
 }
 
+.header-item {
+  position: relative;
+}
+
+.link-studio {
+  color: #404bbf;
+}
+
 .header-container {
   margin-top: auto;
   margin-bottom: auto;
@@ -145,7 +153,7 @@ img {
 /* Hero styles */
 
 .hero {
-  max-width: 1440px;
+  max-width: 1440;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
@@ -380,8 +388,14 @@ img {
   margin-top: 0;
 }
 
-.footer-container {
+.footer-page {
   display: flex;
+  align-items: baseline;
+}
+
+.footer-container {
+  align-items: baseline;
+  padding-left: 0;
 }
 
 .footer-logo-down {
@@ -402,14 +416,28 @@ img {
   letter-spacing: 0.02em;
 }
 
-.feature-icon-container {
-  width: 264px;
-  height: 112px;
-  border-radius: 4px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: var(--CLOUD, #f4f4fd);
-  margin-bottom: 8px;
-  padding: 24px 100px;
+.text-social {
+  color: var(--WHITE, #fff);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-item-list {
+  gap: 18px;
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-icon {
+  fill: #f4f4fd;
 }
 
 .path {
