--- a/css/styles.css
+++ b/css/styles.css
@@ -381,21 +381,18 @@ img {
 
 /* Footer styles */
 
-.footer {
+.footer-page {
+  display: flex;
   background: var(--NAVY-BLUE, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
   margin-top: 0;
-}
-
-.footer-page {
-  display: flex;
-  align-items: baseline;
+  justify-content: center;
 }
 
 .footer-container {
   align-items: baseline;
-  padding-left: 0;
+  margin-right: 120px;
 }
 
 .footer-logo-down {
@@ -428,7 +425,9 @@ img {
 }
 
 .footer-item-list {
-  gap: 18px;
+  gap: 16px;
+  display: inline-flex;
+  text-align: center;
 }
 
 .footer-icon-link:hover,
