--- a/css/styles.css
+++ b/css/styles.css
@@ -103,11 +103,11 @@ img {
 }
 
 .header-item {
-  position: relative;
 }
 
 .link-studio {
   color: #404bbf;
+  position: relative;
 }
 
 .header-container {
@@ -153,7 +153,7 @@ img {
 /* Hero styles */
 
 .hero {
-  max-width: 1440;
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
@@ -227,6 +227,10 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .main-title {
@@ -363,6 +367,11 @@ img {
   border-top: none;
 }
 
+.ProjectCard {
+  position: relative;
+  overflow: hidden;
+}
+
 .main-text {
   color: var(--SLATE, #434455);
   font-family: "Roboto", sans-serif;
@@ -383,6 +392,7 @@ img {
 
 .footer-page {
   display: flex;
+  align-items: baseline;
   background: var(--NAVY-BLUE, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
@@ -391,7 +401,6 @@ img {
 }
 
 .footer-container {
-  align-items: baseline;
   margin-right: 120px;
 }
 
