--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,6 @@ img {
 /* Hero styles */
 
 .hero {
-  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
@@ -162,10 +161,6 @@ img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.hero-container {
-  display: flex;
 }
 
 .title {
@@ -391,12 +386,11 @@ img {
 
 /* Footer styles */
 
-.footer-page {
-  align-items: baseline;
+.footer {
   background: var(--NAVY-BLUE, #2e2f42);
   padding-top: 100px;
   padding-bottom: 100px;
-  margin: 0;
+  margin-top: 0;
 }
 
 .footer-logo-down {
@@ -415,38 +409,6 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-.text-social {
-  color: var(--WHITE, #fff);
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  margin-bottom: 16px;
-}
-
-.footer-item-list {
-  gap: 16px;
-  text-align: center;
-}
-
-.footer-social-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: baseline;
-}
-
-.footer-icon-link:hover,
-.footer-icon-link:focus {
-  background-color: #31d0aa;
-}
-
-.footer-icon {
-  fill: #f4f4fd;
 }
 
 .path {
