--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,12 @@ img {
   display: flex;
   list-style-type: none;
   gap: 16px;
+  margin-top: 16px;
+}
+
+.icon-link-footer {
+  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-text-footer {
@@ -430,6 +436,8 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-container-social {
@@ -438,8 +446,14 @@ img {
 
 .footer-container {
   display: flex;
-  flex-direction: row;
+  margin-right: 120px;
 }
 
 .page-footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-logo {
+  margin-right: 120px;
 }
