--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,8 @@ img {
 /* Hero styles */
 
 .hero {
+  max-width: 1440px;
+  margin: auto;
   padding-top: 188px;
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
@@ -161,9 +163,6 @@ img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.title {
 }
 
 .hero-title {
@@ -192,6 +191,7 @@ img {
   display: block;
   margin: 0 auto;
   margin-top: 48px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -427,6 +427,10 @@ img {
   display: flex;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.icon-link-footer:hover,
+.icon-link-footer:focus {
+  background-color: #31d0aa;
+}
 
 .social-text-footer {
   color: var(--WHITE, #fff);
@@ -436,8 +440,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 16px;
 }
 
 .footer-container-social {
