--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,8 @@ img {
   border: none;
   border-radius: 4px;
   display: block;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 48px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
