--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ img {
   padding-bottom: 188px;
   background: var(--NAVY-BLUE, #2e2f42);
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(/images/people-office1.jpeg);
+    url(../images/people-office1.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
